--- a/.env
+++ b/.env
@@ -34,4 +34,10 @@ APP_SECRET=
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 #MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+#MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=-1
+#MESSENGER_TRANSPORT_DSN=doctrine://default?table_name=messenger_messages
 ###< symfony/messenger ###
+
+###> symfony/mailer ###
+#MAILER_DSN=smtp://mailer:1025
+###< symfony/mailer ###
