--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,11 @@
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.3",
         "symfony/console": "7.3.*",
+        "symfony/doctrine-messenger": "7.3.*",
         "symfony/dotenv": "7.3.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.3.*",
+        "symfony/mailer": "7.3.*",
         "symfony/messenger": "7.3.*",
         "symfony/object-mapper": "7.3.*",
         "symfony/property-access": "7.3.*",
