--- a/.env
+++ b/.env
@@ -33,5 +33,10 @@ DATABASE_URL="postgresql://app:!ChangeMe!@database:5432/app?serverVersion=16&cha
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
-MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+#MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=-1
+MESSENGER_TRANSPORT_DSN=doctrine://default?table_name=messenger_messages
 ###< symfony/messenger ###
+
+###> symfony/mailer ###
+MAILER_DSN=smtp://mailer:1025
+###< symfony/mailer ###
