--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@
 /.idea/
 ###< symfony/framework-bundle ###
 
+
+###> phpunit/phpunit ###
+/phpunit.xml
+/.phpunit.cache/
+###< phpunit/phpunit ###
